# nanobot-websocket-channel

./: .gitignore  README.md  pyproject.toml
client-telegram-bot/: Dockerfile  PLAN.md  README.md  bot.py  logging_config.py  pyproject.toml
client-telegram-bot/handlers/: __init__.py  commands.py  intent_router.py  messages.py  session.py
client-telegram-bot/services/: nanobot_client.py
client-web-flutter/lib/: chat_screen.dart  llm_service.dart  login_screen.dart  main.dart
mcp-webchat/src/mcp_webchat/: server.py
nanobot-webchat/: pyproject.toml
nanobot-webchat/src/nanobot_webchat/: structured.py
nanobot_webchat/: channel.py
