[project]
name = "nanobot-webchat"
version = "1.0.0"
description = "WebSocket channel plugin for nanobot-ai — enables web clients to chat with the agent"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai",
    "websockets>=15.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
nanobot-ai = { git = "https://github.com/HKUDS/nanobot.git", rev = "e7d371ec1e6531b28898ec2c869ef338e8dd46ec" }

[dependency-groups]
dev = [
    "aiogram>=3.20",
    "poethepoet>=0.40.0",
    "pydantic-settings>=2.0",
    "pyright==1.1.408",
]

[tool.setuptools.packages.find]
include = ["nanobot_webchat*"]

[project.entry-points."nanobot.channels"]
webchat = "nanobot_webchat:WebChatChannel"

[tool.poe.tasks]
[tool.poe.tasks.typecheck]
help = "Run Python and Flutter typechecks"
sequence = ["pyright-check", "flutter-pub-get", "flutter-analyze"]

[tool.poe.tasks.pyright-check]
help = "Run pyright on Python packages"
cmd = "pyright nanobot_webchat client-telegram-bot"

[tool.poe.tasks.flutter-analyze]
help = "Run static analysis on the Flutter client"
cmd = "flutter analyze"
cwd = "client-web-flutter"

[tool.poe.tasks.flutter-pub-get]
help = "Resolve Flutter dependencies for analysis"
cmd = "flutter pub get"
cwd = "client-web-flutter"

[tool.pyright]
include = [
    "nanobot_webchat",
    "client-telegram-bot",
]
exclude = [
    "**/__pycache__",
    "**/.*",
]
typeCheckingMode = "standard"
