[project]
name = "lms-client-telegram-bot"
version = "0.1.0"
description = "LMS Telegram Bot"
requires-python = "==3.14.*"
dependencies = [
    "aiogram>=3.20",
    "nanobot-channel-protocol",
    "opentelemetry-distro[otlp]>=0.61b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.61b0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "pydantic-settings>=2.0",
    "websockets>=15.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
nanobot-channel-protocol = { workspace = true }

[tool.setuptools]
py-modules = ["bot", "settings"]

[tool.setuptools.packages.find]
include = ["handlers*", "services*"]
